# gen-ai-software-engineering

homework-1/: .gitignore  HOWTORUN.md  README.md  package-lock.json  package.json
homework-1/demo/: README.md  run.sh  sample-data.json  sample-requests.http  sample-requests.sh
homework-1/src/: app.js
homework-1/tests/: transactions.test.js
homework-2/: README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
homework-2/demo/: demo.sh  sample_tickets.csv  sample_tickets.json  sample_tickets.xml
homework-2/src/: app.ts  index.ts
homework-2/tests/: helpers.ts  test_branch_coverage.test.ts  test_categorization.test.ts  test_import_csv.test.ts  test_import_json.test.ts  test_import_xml.test.ts  test_integration.test.ts  test_performance.test.ts  test_ticket_api.test.ts  test_ticket_model.test.ts
homework-3/: README.md  agents.md  specification.md
homework-4/: HOWTORUN.md  README.md  package.json  run-pipeline.sh
homework-4/src/: calc.js  evaluate.js  index.js
homework-4/tests/: calc-fixes.test.js  calc.test.js  evaluate-sec001.test.js  evaluate.test.js
homework-5/: .mcp.json  HOWTORUN.md  README.md
homework-5/custom-mcp-server/: lorem-ipsum.md  pyproject.toml  server.py
homework-6/: .mcp.json  HOWTORUN.md  README.md  demo.sh  integrator.py  research-notes.md  specification.md
homework-6/.claude/: settings.json
homework-6/agents/: __init__.py  compliance_checker.py  fraud_detector.py  protocol.py  rule_engine.py  transaction_validator.py
homework-6/docs/: presentation.html
homework-6/frontend/: _py314_compat.py  server.py
(+101 files in other folders)
